--- a/1 中国图书馆分类法/T 工业技术/TP 自动化技术、计算机技术/TP1 自动化基础理论/TP18 人工智能理论.md
+++ b/1 中国图书馆分类法/T 工业技术/TP 自动化技术、计算机技术/TP1 自动化基础理论/TP18 人工智能理论.md
@@ -7,7 +7,6 @@ ctime-p: 2025-01-25T13:14:24
 
 # TP18 人工智能理论
 
-- 类目
-	- [[TP 自动化技术、计算机技术#TP18 人工智能理论]]
-- 有关
-	- [[App AI]]
+- [[TP181 自动推理、机器学习]]
+- [[TP182 专家系统、知识工程]]
+- [[TP183 人工神经网络与计算]]
