--- a/1 中国图书馆分类法/T 工业技术/TP3 计算技术、计算机技术/TP39 计算机的应用/TP393 计算机网络/TP393.0 一般性问题.md
+++ b/1 中国图书馆分类法/T 工业技术/TP3 计算技术、计算机技术/TP39 计算机的应用/TP393 计算机网络/TP393.0 一般性问题.md
@@ -6,3 +6,13 @@ ctime-p: 2025-02-21T21:09:27
 ---
 
 # TP393.0 一般性问题
+
+- [[TP393.01 计算机网络理论]]
+- [[TP393.02 计算机网络设计]]
+- [[TP393.03 网络互连技术]]
+- [[[TP393.04] 网络通信规程、网络通信协议]]
+- [[[TP393.05] 计算机网络设备]]
+- [[TP393.06 计算机网络测试、计算机网络运行]]
+- [[TP393.07 计算机网络管理]]
+- [[TP393.08 计算机网络安全]]
+- [[TP393.09 计算机网络应用]]
