--- a/1 中国图书馆分类法/T 工业技术/TP3 计算技术、计算机技术/TP39 计算机的应用/TP393 计算机网络/TP393.0 一般性问题/TP393.09 计算机网络应用.md
+++ b/1 中国图书馆分类法/T 工业技术/TP3 计算技术、计算机技术/TP39 计算机的应用/TP393 计算机网络/TP393.0 一般性问题/TP393.09 计算机网络应用.md
@@ -6,3 +6,10 @@ ctime-p: 2025-02-21T21:13:13
 ---
 
 # TP393.09 计算机网络应用
+
+- [[TP393.092 网站、网页、网络浏览器]]
+- [[TP393.093 文件传送程序（FTP）、远程登录（Telnet）]]
+- [[TP393.094 网络交互技术]]
+- [[TP393.096 网络辅助工具]]
+- [[TP393.098 电子邮件（E-mail）]]
+- [[TP393.099 其他计算机网络应用]]
