--- a/1 中国图书馆分类法.md
+++ b/1 中国图书馆分类法.md
@@ -79,3 +79,65 @@ aliases:
 		- [[X 环境科学、安全科学|Environmental science, safety science]]
 	- [[Z 综合性图书]]
 		- [[Z 综合性图书|Comprehensive books]]
+
+
+## Field Schema
+
+|           |            |
+| --------- | ---------- |
+| up        | `Link[]`   |
+| date-link | `Link`     |
+| date      | `Date`     |
+| ctime-p   | `DateTime` |
+| english   | `string`   |
+| aliases   | `string[]` |
+| down      | `Link[]`   |
+
+## View
+
+```dataviewjs
+const pages = dv.pages(`"1 area/1 knwl/1 中国图书馆分类法"`)
+
+const headers = ["File","sym", "name","english"]
+
+function getBoldStr(inStr){
+	return "**" + inStr + "**";
+}
+
+function getElement(p){
+	let sym = p.file.name.replace(/^(.*?)\s(.*?)$/,"$1");
+	let name = p.file.name.replace(/^(.*?)\s(.*?)$/,"$2")
+	let english = p.english;
+	let icon;
+	
+	if (sym.length<=1){
+		icon = "📗"
+		name = getBoldStr(name)
+		english = getBoldStr(english)
+		sym = getBoldStr(sym)
+	}else{
+		icon = "📄"
+	}
+
+	const fileLink = dv.func.link(p.file.path,icon)
+
+	return [
+		fileLink,
+		sym,
+		name,
+		english
+	]
+}
+
+const elements = pages
+	.filter(p=>p.english)
+	.map(p=>getElement(p))
+	.sort(e=>e[1].replace(/[\[\]\*]/g, ""))
+
+dv.table(headers, elements)
+
+```
+
+## See Also
+
+- 中国图书馆分类法网站 | [《中图法》网站](http://clc.nlc.cn/)
