--- a/1 中国图书馆分类法.md
+++ b/1 中国图书馆分类法.md
@@ -95,8 +95,11 @@ aliases:
 
 ## View
 
+> Enable Dataview Plugin to See This View
+> 启用 Dataview 插件来查看这个视图
+
 ```dataviewjs
-const pages = dv.pages(`"1 area/1 knwl/1 中国图书馆分类法"`)
+const pages = dv.pages(`"1 中国图书馆分类法"`)
 
 const headers = ["File","sym", "name","english"]
 
