--- a/1 中国图书馆分类法/T 工业技术/TP3 计算技术、计算机技术/TP31 计算机软件/TP311 程序设计、软件工程/TP311.5 软件工程/TP311.56 软件工具、工具软件.md
+++ b/1 中国图书馆分类法/T 工业技术/TP3 计算技术、计算机技术/TP31 计算机软件/TP311 程序设计、软件工程/TP311.5 软件工程/TP311.56 软件工具、工具软件.md
@@ -11,3 +11,10 @@ aliases:
 # TP311.56 软件工具、工具软件
 
 - up: [[TP311.5 软件工程]]
+- down:
+	- [[TP311.561 软件工具]]
+	- [[TP311.562 计算机测试软件]]
+	- [[TP311.563 安全软件]]
+	- [[TP311.564 文件处理工具软件]]
+	- [[TP311.567 驱动程序]]
+	- [[TP311.569 其他软件工具]]
