--- a/1 中国图书馆分类法/T 工业技术/TP3 计算技术、计算机技术/TP39 计算机的应用/TP391 信息处理（信息加工）.md
+++ b/1 中国图书馆分类法/T 工业技术/TP3 计算技术、计算机技术/TP39 计算机的应用/TP391 信息处理（信息加工）.md
@@ -12,13 +12,13 @@ aliases:
 
 - up: [[TP39 计算机的应用]]
 - down:	
-	- TP391.1 文字信息处理
-	- TP391.2 翻译机
-	- TP391.3 检索机
-	- TP391.4 模式识别与装置
-	- TP391.5 诊断机
-	- TP391.6 教学机、学习机
-	- TP391.7 机器辅助技术
-	- TP391.8 控制机
-	- TP391.9 计算机仿真
+	- [[TP391.1 文字信息处理]]
+	- [[TP391.2 翻译机]]
+	- [[TP391.3 检索机]]
+	- [[TP391.4 模式识别与装置]]
+	- [[TP391.5 诊断机]]
+	- [[TP391.6 教学机、学习机]]
+	- [[TP391.7 机器辅助技术]]
+	- [[TP391.8 控制机]]
+	- [[TP391.9 计算机仿真]]
 	
